--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,121 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'IBM Plex Sans Arabic', sans-serif;
-    background-image: url(https://www.ivrea.com.ar/img/bg.jpg);
-}
-
-/* Inicio CSS para HTML Index */
-
-.cabeza {
-    width: 100%;
-    height: auto;
-    min-height: 120px;
-    background-color: #FFAD2C;
-    border-bottom: solid #B6500E 5px;
-}
-
-.logo {
-    width: 70px;
-    height: 70px; 
-    margin-top: 10px;
-}
 
 
-.banner {
-    width: auto;
-    height: auto;
-}
-
-
-.editorial {
-    height: 100%;
-    width: 85%;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.editorial__div {
-    width: auto;
-    height: 35rem;
-}
-
-.editorial__img {
-    width: 50%;
-    height: 50%;
-}
-
-
-.mangakas {
-    height: auto;
-    width: 100%;
-}
-
-.mangakas__img {
-    width: 100%;
-    height: 200px;
-}
-
-
-.recomienda {
-    width: 100%;
-    height: auto;
-    margin-top: 30px;
-
-    display: flex;
-    flex-direction: column;
-}
-
-.recomienda__titulo {
-    text-align: center;
-    font-size: 35px;
-    margin-bottom: 30px;
-}
-
-.recomienda__div {
-    height: 100px;
-    width: 100%;
-}
-
-.recomienda__img {
-    height: auto;
-    width: auto;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-}
-
-.recomienda__img:hover {
-    transform: scale(1.15);
-}
-
-
-.pie {
-    width: 100%;
-    height: 100px;
-    background-color: #FFAD2C;
-    border-top: solid 6px #B6500E;
-    margin-top: 1rem;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.pie-lista {
-    list-style: none;
-    padding-top: 15px;
-    font-size: 20px;
-}
-
-.redes {
-    height: 40px;
-    width: 40px;
-    margin-top: 28px;
-    margin-right: 20px;
-}
-
-/* Fin de CSS para HTML Index */
+/*# sourceMappingURL=estilos.css.map */
