--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,8 +1,8 @@
 .pie {
     width: 100%;
     height: 100px;
-    background-color: #FFAD2C;
-    border-top: solid 6px #B6500E;
+    background-color: $mainColor;
+    border-top: solid 6px $borderColor;
     margin-top: 1rem;
     position: relative;
     display: flex;
