--- a/components/_main.scss
+++ b/components/_main.scss
@@ -57,9 +57,9 @@
         width: auto;
         transition: transform 0.3s ease;
         cursor: pointer;
-    }
-    
-    &__img:hover {
-        transform: scale(1.15);
+
+        &:hover {
+            transform: scale(1.15);
+        }
     }
 }
